--- a/agijagi/app/build.gradle
+++ b/agijagi/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     //navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.0'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
 }
