--- a/agijagi/app/build.gradle
+++ b/agijagi/app/build.gradle
@@ -60,4 +60,7 @@ dependencies {
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.16.0'
+
+    //splash
+    implementation "androidx.core:core-splashscreen:1.0.1"
 }
