--- a/agijagi/app/src/main/AndroidManifest.xml
+++ b/agijagi/app/src/main/AndroidManifest.xml
@@ -24,4 +24,7 @@
         </activity>
     </application>
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
+
 </manifest>
