--- a/agijagi/app/build.gradle
+++ b/agijagi/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -56,7 +57,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.2.2'
 
     // Navigation
-    //navigation
     implementation 'androidx.navigation:navigation-fragment:2.6.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.0'
