--- a/agijagi/app/src/main/AndroidManifest.xml
+++ b/agijagi/app/src/main/AndroidManifest.xml
@@ -26,5 +26,6 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
