--- a/agijagi/app/build.gradle
+++ b/agijagi/app/build.gradle
@@ -53,6 +53,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:24.7.1'
     implementation 'com.google.firebase:firebase-auth-ktx:22.1.1'
 
+    // Google Play services
+    implementation 'com.google.gms:google-services:4.3.15'
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
+
     // Firebase Realtime Database
     implementation 'com.google.firebase:firebase-database:20.2.2'
 
