--- a/agijagi/app/src/main/AndroidManifest.xml
+++ b/agijagi/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
+            android:windowSoftInputMode="stateHidden|adjustResize"
             android:exported="true"
             android:theme="@style/AppTheme.Splash">
             <intent-filter>
