--- a/agijagi/app/build.gradle
+++ b/agijagi/app/build.gradle
@@ -52,13 +52,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.7.1'
     implementation 'com.google.firebase:firebase-auth-ktx:22.1.1'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.2.1'
+    implementation 'com.google.firebase:firebase-storage:20.2.1'
 
     // Google Play services
     implementation 'com.google.gms:google-services:4.3.15'
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
-
-    // Firebase Realtime Database
-    implementation 'com.google.firebase:firebase-database:20.2.2'
 
     // Navigation
     implementation 'androidx.navigation:navigation-fragment:2.6.0'
