--- a/agijagi/app/build.gradle
+++ b/agijagi/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.7.1'
     implementation 'com.google.firebase:firebase-auth-ktx:22.1.1'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.2.1'
+    implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
 
     // Google Play services
     implementation 'com.google.gms:google-services:4.3.15'
@@ -77,4 +79,6 @@ dependencies {
     // Livedata
     implementation "androidx.lifecycle:lifecycle-livedata:2.6.2"
 
+    // Shimmer
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 }
