--- a/agijagi/app/build.gradle
+++ b/agijagi/app/build.gradle
@@ -80,4 +80,5 @@ dependencies {
 
     // Shimmer
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'io.supercharge:shimmerlayout:2.1.0'
 }
