Feat: 스플래시 스크린 #246
그라데이션을 넣기 위해 별도의 스플래시 화면을 구성함

--- a/agijagi/app/src/main/AndroidManifest.xml
+++ b/agijagi/app/src/main/AndroidManifest.xml
@@ -13,16 +13,19 @@
         android:theme="@style/Theme.Agijagi"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:windowSoftInputMode="stateHidden|adjustResize"
+            android:name=".SplashScreenActivity"
             android:exported="true"
-            android:theme="@style/AppTheme.Splash">
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.Splash"
+            android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
     </application>
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
