Feat: ShoppingList 구현 #275 (#365)
* Feat: shoppingList checkBox 기능구현 #275

- shoppingList checkBox 기능구현

* Feat: shoppingList item DB 연동 #275

- shoppingList item DB 연동

* Feat: ShoppingList 구현 #275

- 장바구니 기능 구현
- 키보드가 올라왔을 때 화면을 가리던 버그 수정

* Feat: conflict 해결 및 데이터 수정 #275

- shoppingList의 count 데이터 및 이미지 수정

* Feat: conflict 해결 및 데이터 수정 #275

- ProductModel 충돌 해결

--- a/agijagi/app/src/main/AndroidManifest.xml
+++ b/agijagi/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
             android:name=".SplashScreenActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.Splash"
-            android:windowSoftInputMode="stateHidden|adjustResize">
+            android:theme="@style/AppTheme.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
